Maven Surefire Plugin
Added plugin to run project, and moved to parent pom

Issues: #40