@@ -54,9 +54,12 @@
                   <artifactId>maven-surefire-plugin</artifactId>
                   <version>3.0.0-M5</version>
                   <configuration>
-                      <source>1.8</source>
-                      <target>1.8</target>
-                  </configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <argLine>
+                      --add-opens calendarApp.ui/calendarApp.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
+                </configuration>
         </plugin>
         <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
